...
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BH9-Xm-wKj">
                    <rect key="frame" x="50" y="255" width="204" height="34"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.74834408969999999" green="0.74834408969999999" blue="0.74834408969999999" alpha="1" colorSpace="calibratedRGB"/>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                    <state key="normal" title="返   回">
                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="backPressed:" destination="-1" eventType="touchUpInside" id="Mb3-UM-Zes"/>
                    </connections>
...
