...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kbO-q7-LSW">
                                <rect key="frame" x="0.0" y="471" width="80" height="49"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                <color key="backgroundColor" red="0.12156862745098039" green="0.74901960784313726" blue="0.6588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <state key="normal" title="添  加">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="addRecord:" destination="9pv-A4-QxB" eventType="touchUpInside" id="ej8-Cc-qbv"/>
                                </connections>
...
